# oregon-processing-project

./: .gitignore  README.md  config.env  connect.bat  export.bat  pyproject.toml  setup.bat  setup.cmd  terminal.bat  test.py
demo/: test.py
dev/: install.py
scripts/: cleanup.bat  install.bat  install_dev.bat  open_terminal.bat  start_export.bat
src/oregon_communicator/: oregon_communicator.py  test.py
src/oregon_processing/: command_manager.py  execute.py  firmware_updater.py  interactive_terminal.py  oregon_communicator.py  oregon_connector.py  system_status.txt  test.py  upload_log.txt
src/oregon_processing/app/: export_protocol.py  setup_config.py  terminal.py
src/oregon_processing/commands/: __init__.py  create_project.py  get_database_status.py  get_latest_record_dates.py  open_terminal.py  run_export_protocol.py  setup_config.py
src/oregon_processing/util/: __init__.py  clock_manager.py  command_manager.py  communicator.py  config.py  config_manager.py  connector.py  data_exporter.py  database_manager.py  device_health_checker.py  device_mode_manager.py  directory_names.py  display_constants.py  exceptions.py  export_protocol.py  file_names.py  firmware_updater.py  format_manager.py  input_logger.py  interactive_terminal.py  logging_manager.py  managed_log_stream.py  oregon_communicator.py  oregon_config.py  oregon_connector.py  project.py  system_status.py  tee_stream.py  upload_history.py  util_functions.py
src/oregon_processing/util/popups/: approve_correction_popup.py  datetime_popup.py  file_selector.py  name_popup.py  number_popup.py  permission_denied_popup.py  popup.py  select_employee_role_popup.py  url_popup.py  yes_no_popup.py
test/: terminal.py  test.py
tools/: cleanup.bat  cleanup.py  open_terminal.bat  setup_config.bat  start_export.bat
