[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oregon-processing"
version = "1.0.0"
description = "A Python package for communicating with Oregon RFID devices via serial connection"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Author Name", email = "author@example.com"},
]
keywords = ["oregon", "rfid", "serial", "communication"]


dependencies = [
    "pyserial>=3.5",
    "pyreadline3>=0.8.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
open-terminal = "oregon_processing.app.terminal:run"
run-export = "oregon_processing.app.export_protocol:run"
setup-config = "oregon_processing.app.setup_config:run"

[project.urls]
Homepage = "https://github.com/yourusername/oregon-processing-project"
Documentation = "https://github.com/yourusername/oregon-processing-project#readme"
Repository = "https://github.com/yourusername/oregon-processing-project.git"
"Bug Tracker" = "https://github.com/yourusername/oregon-processing-project/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=oregon_processing --cov-report=term-missing"
